--- a/app/views/enquiries/new.html.erb
+++ b/app/views/enquiries/new.html.erb
@@ -35,7 +35,7 @@
                       <div class="row row-top mt-15">
                         <div class="col-xs-12">
                           <div class="form-group form-last">
-                            <div class="col-xs-10 col-xs-offset-2">
+                            <div class="col-xs-12 text-right">
                             <%= f.submit "Save",{class: "btn btn-primary"} %>
                             <%= f.submit "Save and New",{class: "btn btn-primary",
                                                    name: 'save_new'} %>
