--- a/app/views/programmes/_ransack_filter.html.erb
+++ b/app/views/programmes/_ransack_filter.html.erb
@@ -2,7 +2,7 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="col-md-4">
-                    <h5>Course</h5>
+                    <h5><strong>Course</strong></h5>
                   </div>
                   <div class="col-md-5 text-right pull-right">        
                    <span onclick="$('.ransack').slideToggle();" class="pointer glyphicon glyphicon-arrow-up"></span>
@@ -40,7 +40,7 @@
               <div class="row">
                <div class="col-md-12">
                   <div class="col-md-4">
-                    <h5>Registration</h5>
+                    <h5><strong>Registration</strong></h5>
                   </div>
                </div>
               </div> 
@@ -78,7 +78,7 @@
               <div class="row">
                <div class="col-md-12">
                   <div class="col-md-4">
-                    <h5>Fee</h5>
+                    <h5><strong>Fee</strong></h5>
                   </div>
                </div>
               </div> 
@@ -109,7 +109,7 @@
               <div class="row">
                <div class="col-md-12">
                   <div class="col-md-4">
-                    <h5>Sort By</h5>
+                    <h5><strong>Sort By</strong></h5>
                   </div>
                </div>
               </div> 
