--- a/app/views/programmes/_listing.html.erb
+++ b/app/views/programmes/_listing.html.erb
@@ -37,6 +37,7 @@
                                         'Update Status',
                                         'updateCommClaim',
                                          _id) %>
+                    <div id="partial-fee"></div>
                 <!----------------------- Comm Claim Update Modal End---------------------------->
                 <!----------------------- App Status Modal Start---------------------------->
                      <%= bulk_asso_update("Application Status",
@@ -108,6 +109,9 @@
           </div>
       </div>
        <!-----------------------Ransack Filter End---------------------------->
+       <!-----------------------Edit fee Start---------------------------->
+         <div id="resource-edit"></div>
+       <!-----------------------Edit fee End---------------------------->
 
 <table id='<%= _id %>' cellpadding="0" cellspacing="0" border="0" class="table table-hover" data-source="<%= url %>">
 <thead>
@@ -130,7 +134,6 @@
         <% end %>
       <% end %>
 
-      <th></th>
       <th></th>
       <th></th>
 
