--- a/app/views/fees/_create_fee.html.erb
+++ b/app/views/fees/_create_fee.html.erb
@@ -17,12 +17,13 @@
   <% end %>
   
 
-    <div class="form-group ">
-      <div class="col-sm-offset-6">
+    <div class="form-group form-last">
+      <div class="col-xs-5 text-right">
         <%= f.submit "Save",{class: "btn btn-primary"} %>
       </div>
     </div>
-
+    
+    <%= render 'user_configs/progress_fu_start' %>
   
 <% end %>
 
