--- a/app/views/institutions/_form.html.erb
+++ b/app/views/institutions/_form.html.erb
@@ -17,7 +17,7 @@
                           
    <div class="row row-top">
     <div class="col-xs-7">
-      <h3><%= what %> institution <span class="light">- <%= link_to @institution.name,institution_path(@institution) %> </span></h3>
+      <h3><%= what %> institution <span class="light"> <%= link %> </span></h3>
     </div>
     <div class="col-xs-5 text-right">
       <div class="form-group form-last">
